fixed logo overlapping and fix missed and totally bad section breaks

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,7 +88,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 730px;
+        max-width: 1030px;
     }
 
     /* Remove the padding we set earlier */
